--- a/resources/lang/pt-BR.json
+++ b/resources/lang/pt-BR.json
@@ -8,5 +8,6 @@
   "Forgot Your Password?": "Esqueceu sua Senha?",
   "Name":"Nome",
   "Confirm Password":"Confirmar Senha",
-  "Dashboard":"Painel"
+  "Dashboard":"Painel",
+  "Home":"Início"
 }
